src/components/MobileEventsCard/MobileEventsCard.css
.mobile-events-card h3{
    font-size: 24px;
    font-weight: 600;
    padding: 18px;
    text-align: center;
}
.mobile-events-card img{
    width: 100%;
}
.mobile-events-card .buttons{
    display: flex;
    justify-content: space-between;
    padding: 20px;
}
.mobile-events-card .buttons a{
    color: #fff;
    background-color: rgba(136,111,192, .55);
    font-size: 14px;
    font-family: var(--secondary-font);
    height: 35px;
    width: 115px;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 15px;
}
.carousel-section .mobile-carousel{
    margin-bottom: 80px;
}

@media (max-width: 500px) {
    .mobile-events-card h3 {
      font-size: 22px;
      padding: 15px;
    }
    
    .mobile-events-card .buttons {
      padding: 15px;
    }
    
    .mobile-events-card .buttons a {
      font-size: 13px;
      width: 110px;
    }
  }
  

  @media (max-width: 450px) {
   
   

    .mobile-events-card h3 {
      font-size: 20px;
      padding: 12px;
    }
    
    .mobile-events-card .buttons {
      padding: 15px;
     
    }
    
    .mobile-events-card .buttons a {
      font-size: 12px;
      height: 30px;
      width: 85px;
    }
  }
  

  @media (max-width: 386px) {
    .mobile-events-card h3 {
      font-size: 18px;
      padding: 10px;
    }
    
    
  }
  
 

